--- a/index.css
+++ b/index.css
@@ -4,11 +4,11 @@
 }
 .container{
     margin: 0;
+    background-image:  linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(./Assets/banner.png );
     background-color: black;
     display: flex;
     justify-content: space-between;
     min-width: 100vw;
-    background-image: url(./Assets/banner.png );
     min-height: 100vh;
     background-size: contain;
     
