--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
     background-color: black;
     display: flex;
     justify-content: space-between;
-    min-width: 100vw;
+    min-width: 100%;
     min-height: 100vh;
     background-size: contain;
     
@@ -30,8 +30,17 @@ a{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 }
-a:hover{
-    text-decoration: 2px  red underline;
+.inner-container li a::after{
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #f44336;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+.inner-container li a::after:hover{
+    width: 100%;
 }
 img{
     background-size: contain;
