--- a/index.css
+++ b/index.css
@@ -1,47 +1,97 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
-    margin: 0;
     padding: 0;
-}
-.container{
     margin: 0;
-    background-image:  linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(./Assets/banner.png );
-    background-color: black;
-    display: flex;
-    justify-content: space-between;
-    min-width: 100%;
+}
+.header{
     min-height: 100vh;
-    background-size: contain;
-    
-}
-.inner-container{
-    display: flex;
-    margin-top: 10px;
-}
-li{
-    list-style: none;
-    margin-right: 10px;
-
-}
-a{
-    text-decoration: none;
-    text-transform: uppercase;
-    color: white;
-    font-weight: bold;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-}
-.inner-container li a::after{
-    content: '';
     width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.70),rgba(4,9,30,0.70)), url(./Assets/banner.png) ;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+nav{
+    display: flex;
+    padding: 2% 6%;
+    justify-content: space-between;
+    align-items: center;
+}
+nav img{
+    width: 150px;
+
+}
+.nav-links{
+    flex: 1;
+    text-align: right;
+
+}
+.nav-links ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+}
+.nav-links ul li a{
+    color:#fff;
+    font-family: 'poppins' sans-serif;
+    text-decoration: none;
+    font-size: 13px;
+}
+.nav-links ul li::after{
+    content: '';
+    width: 0%;
     height: 2px;
-    background: #f44336;
+    background:#f44336;
     display: block;
     margin: auto;
     transition: 0.5s;
 }
-.inner-container li a::after:hover{
+.nav-links ul li:hover::after{
     width: 100%;
+    
 }
-img{
-    background-size: contain;
+.text-box{
+    width: 90%;
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+
+}
+.text-box h1{
+    font-size: 62px;
+}
+.text-box p{
+    margin: 10px 0 40px;
+    font-size: 14px;
+    color:white
+}
+.hero-btn{
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+
+}
+.hero-btn:hover{
+    border: 1px solid #f44336;
+    background: #f44336;
+    transition: 1s;
+
+}
+@media(max-width: 700px ){
+.text-box h1{
+    font-size: 20px;
+}
+.nav-links ul li{
+    display: block;
+}
 }
