--- a/index.css
+++ b/index.css
@@ -94,4 +94,236 @@ nav img{
 .nav-links ul li{
     display: block;
 }
+.nav-links{
+    position: absolute;
+    background: #f44336;
+    height: 100vh;
+    width: 200px;
+    top: 0;
+    right: 0;
+    text-align: left;
+    z-index: 2;
+    transition: 1s;
 }
+nav .fa{
+    display: block;
+    color: white;
+    margin: 10px;
+    font-size: 22px;
+    cursor: pointer;
+}
+.nav-links{
+    padding: 30px;
+}
+}
+
+     /* course */
+     .course{
+        width: 80%;
+        margin: auto;
+        text-align: center;
+        padding: 100px;
+     }
+     h1{
+        font-size: 36px;
+        font-weight: 600;
+     }
+     p{
+        color: #777;
+        font-size: 14px;
+        font-weight: 300;
+        line-height: 22px;
+        padding: 10px;
+     }
+     .row{
+        margin-top: 5%;
+        display: flex;
+        justify-content: space-between;
+     }
+     .course-col{
+        flex-basis: 31%;
+        background: #fff3f3;
+        margin-bottom: 5%;
+        border-radius: 10px;
+        padding: 20px 12px;
+        box-sizing: border-box;
+        transition: 0.5s;
+     }
+     h3{
+        text-align: center;
+        font-weight: 600;
+        margin: 10px 0;
+     }
+
+     .course-col:hover{
+        box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+     }
+     @media(max-width:700px){
+        .row{
+            flex-direction: column;
+        }
+     }
+     .campus{
+        width: 80%;
+        margin: auto;
+        text-align: center;
+        padding-top: 50px;
+     }
+     .campus-col{
+        flex-basis: 32%;
+        border-radius: 10px;
+        margin-bottom: 30px;
+        position: relative;
+        overflow: hidden;
+
+     }
+     .campus-col img{
+        width: 100%;
+        display: block;
+     }
+     .layer{
+        background: transparent;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+     }
+     .layer:hover{
+        background:rgba(47, 106, 225, 0.7) ;
+     }
+     .layer h3{
+        width: 100%;
+        font-weight: 500;
+        color: #fff;
+        font-size: 26px;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        position: absolute;
+        opacity: 0;
+        transition: 0.8s;
+     }
+     .layer:hover h3{
+        bottom: 49%;
+        opacity: 1;
+
+     }
+     /* facility */
+     .facilities{
+        width: 80%;
+        margin: auto;
+        text-align: center;
+        padding-top: 100px;
+     }
+     .facilities{
+        width: 80%;
+        margin: auto;
+        text-align: center;
+        padding-top: 100px;
+     }
+     .facility-col{
+        flex-basis: 31%;
+        border-radius: 10px;
+        margin-bottom: 5%;
+        text-align: left;
+     }
+     .facility-col img{
+        width: 100%;
+        border-radius: 10px;
+     }
+     .facility-col p{
+        padding: 0;
+
+     }
+     .facility-col h3{
+        margin-top: 16px;
+        margin-bottom: 15px;
+        text-align: left;
+     }
+     .testimonials{
+        width: 80%;
+        margin: auto;
+        padding-top: 100px;
+        text-align: center;
+
+     }
+     .testimonials-col{
+        flex-basis: 44%;
+        border-radius: 10px;
+        margin-bottom: 5%;
+        text-align: left;
+        background: #fff3f3;
+        padding: 25px;
+        cursor: pointer;
+        display: flex;
+
+     }
+     .testimonials-col img{
+        height: 40px;
+        margin-left: 5px;
+        margin-right: 30px;
+        border-radius: 50%;
+     }
+     .testimonials-col p{
+      padding: 0;
+     }
+     .testimonials-col h3{
+        margin-top: 15px;
+        text-align: left;
+     }
+     .testimonials-col .fa{
+        color: #f44336;
+     }
+     @media(max-width:700px){
+        .testimonials-col img{
+            margin-left: 0px;
+            margin-right: 15px;
+           
+         }
+
+     }
+     /* call to action */
+     .cta{
+        margin: 100px auto;
+        width: 80%;
+        background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(./Assets/banner.png);
+        background-position: center;
+        background-size: cover;
+        border-radius: 10px;
+        text-align: center;
+        padding: 100px 0;
+        border-radius: 10px;
+        text-align: center;
+        padding: 100px 0;
+     }
+     .cta h1{
+        color: white;
+        margin-bottom: 40px;
+        padding: 0;
+     }
+     @media(max-width:700px){
+        .cta h1{
+            font-size: 24px;
+          
+ 
+        }
+     }
+     /* footer */
+     .footer{
+        width: 100%;
+        text-align: center;
+        padding: 30px 0;
+     }
+     .footer h4{
+        margin-bottom: 25px;
+        margin-top: 20px;
+        font-weight: 600;
+     }
+     .icons{
+        color: #f44336;
+        margin: 0 13px;
+        cursor: pointer;
+        padding: 18px;
+     }
+     
