--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -31,6 +30,7 @@ nav img{
     display: inline-block;
     padding: 8px 12px;
     position: relative;
+    
 }
 .nav-links ul li a{
     color:#fff;
@@ -87,6 +87,7 @@ nav img{
     transition: 1s;
 
 }
+
 @media(max-width: 700px ){
 .text-box h1{
     font-size: 20px;
@@ -98,12 +99,15 @@ nav img{
     position: absolute;
     background: #f44336;
     height: 100vh;
-    width: 200px;
+    width: 100px;
     top: 0;
-    right: 0;
+    right: -200px;
     text-align: left;
     z-index: 2;
     transition: 1s;
+}
+#nav-btn:hover{
+    scale: 1.09;
 }
 nav .fa{
     display: block;
@@ -115,6 +119,9 @@ nav .fa{
 .nav-links{
     padding: 30px;
 }
+}
+.btn{
+    display: none;    
 }
 
      /* course */
@@ -326,4 +333,57 @@ nav .fa{
         cursor: pointer;
         padding: 18px;
      }
-     
+.icons i{
+    margin: 0px 10px ;
+}
+@media (min-width:700px) {
+    #nav-btn{
+        display: none;
+    }
+}
+/* -----about us page----- */
+.sub-header{
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.70),rgba(4,9,30,0.70)), url(./Assets/background.jpg) ;
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    color: #fff;
+    
+
+}
+.sub-header h1{
+    margin-top: 100px;
+}
+#title{
+    top: 50px;
+}
+.about-us{
+    width: 80%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+.about-col{
+    flex-basis: 48%;
+    padding: 30px 2px;
+}
+.about-col img{
+    width: 100%;
+}
+.about-col h1{
+    padding-top: 0;
+}
+.about-col p{
+    padding: 15px 0 25px;
+}
+
+.red-btn{
+    border: 1px solid #f44336;
+    background: transparent;
+    color: #f44336;
+}
+.red-btn:hover{
+    color:white
+}
