--- a/index.css
+++ b/index.css
@@ -96,7 +96,7 @@ nav img{
     display: block;
 }
 .nav-links{
-    position: absolute;
+    position: fixed;
     background: #f44336;
     height: 100vh;
     width: 100px;
@@ -356,9 +356,9 @@ nav .fa{
 .sub-header h1{
     margin-top: 100px;
 }
-#title{
+/* #title{
     top: 50px;
-}
+} */
 .about-us{
     width: 80%;
     margin: auto;
@@ -386,4 +386,122 @@ nav .fa{
 }
 .red-btn:hover{
     color:white
+}
+/* --- Blog --- */
+.blog-content{
+    width: 80%;
+    margin: auto;
+    padding: 60px 0;
+}
+.blog-left{
+    flex-basis: 65%;
+
+}
+.blog-left img{
+    width: 100%;
+}
+.blog-left h2{
+    color:#222;
+    font-weight: 30px 0;
+
+}
+.blog-left p{
+    color: #999;    
+}
+.blog-right{
+    flex-basis: 32%;
+}
+.blog-right h3{
+    background: #f44336;
+    color: #fff;
+    padding: 7px 0;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+.blog-right div{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px;
+    box-sizing: border-box  ;
+}
+.comment-box{
+    border: 1px solid #ccc;
+    margin: 50px 0;
+    padding: 10px 20px;
+
+}
+.comment-box h3{
+    text-align: left;
+}
+.comment-form input, .comment-form textarea{
+    width: 100%;
+    padding: 10px;
+    margin: 15px 0;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    background: #f0f0f0;
+}
+.comment-form button{
+    margin: 10px 0;
+}
+@media(max-width:700px){
+    #title{
+        font-size: 24px;
+    }
+}
+/* Contact us page */
+.location{
+    width: 80%;
+    margin: auto;
+    padding: 80px 0;
+
+}
+.location iframe{
+    width: 100%;
+}
+.contact-us{
+    width: 80%;
+
+}
+.contact-col{
+    flex-basis: 48%;
+    margin-bottom:30px;
+    margin-left: 40px;;
+}
+.contact-col div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+
+}
+.contact-col div .fa{
+    font-size: 28px;
+    color:#f44336;
+    margin: 10px ;
+    margin-right: 30px;
+}
+.c
+.contact-col div p{
+    padding: 0;
+
+}
+.contact-col div h5{
+    font-size: 20px;
+    margin-bottom: 5px;
+    color:#555;
+    font-weight: 400;
+}
+.contact-col input, .contact-col textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+form{
+    border: 1px solid #ccc;
+    padding: 10px;
 }
