--- a/index.css
+++ b/index.css
@@ -95,6 +95,9 @@ nav img{
 .nav-links ul li{
     display: block;
 }
+.header{
+    width: 100%;
+}
 .nav-links{
     position: fixed;
     background: #f44336;
@@ -119,6 +122,7 @@ nav .fa{
 .nav-links{
     padding: 30px;
 }
+
 }
 .btn{
     display: none;    
@@ -286,7 +290,7 @@ nav .fa{
         .testimonials-col img{
             margin-left: 0px;
             margin-right: 15px;
-           
+
          }
 
      }
@@ -504,4 +508,17 @@ nav .fa{
 form{
     border: 1px solid #ccc;
     padding: 10px;
+}
+#title{
+    position: absolute;
+    top: 40%;
+    z-index: 2;
+    color: #fff;
+    left: 45%;
+}
+#blog{
+    text-align: center;
+    margin-top: 30px;
+    font-size: 30px;
+    padding: 0;
 }
